# nova-insurance

./: .gitignore  Anchor.toml  Cargo.toml  Nova-Insurance-Architecture.drawio.xml  README.md  Untitled Diagram.drawio.xml  package.json
programs/nova-insurance/: Cargo.toml
programs/nova-insurance/src/: errors.rs  lib.rs  state.rs
programs/nova-insurance/src/instructions/: claims_management.rs  distribution_management.rs  mod.rs  pool_management.rs  validator_management.rs  vrf_integration.rs  yield_integration.rs
tests/: nova-insurance.ts
